--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,9 @@ android {
     signingConfigs {
         release {
             storeFile file("F:\\Naren\\Swadharmaa\\Project\\upload-key-vunity.jks")
-            storePassword "vunity@123"
-            keyAlias "upload-vunity"
-            keyPassword "vunity@123"
+            storePassword "swadharmaa@123"
+            keyAlias "upload-swadharmaa"
+            keyPassword "swadharmaa@123"
         }
     }
 
@@ -58,12 +58,12 @@ android {
 }
 
 dependencies {
-    def moshiVersion = '1.9.2'
+    def moshiVersion = '1.9.3'
     def retrofit2_version = '2.9.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -97,7 +97,7 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
 
     //Apache commons
-    implementation 'org.apache.commons:commons-lang3:3.10'
+    implementation 'org.apache.commons:commons-lang3:3.11'
 
     // Firebase Crashlytics SDK.
     implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
@@ -107,6 +107,6 @@ dependencies {
     implementation 'com.github.HBiSoft:PickiT:0.1.11'
 
     //Razorpay
-    implementation 'com.razorpay:checkout:1.5.15'
+    implementation 'com.razorpay:checkout:1.6.3'
 
 }
