--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,30 +58,21 @@ android {
 }
 
 dependencies {
-    def moshiVersion = '1.9.3'
+    def moshiVersion = '1.11.0'
     def retrofit2_version = '2.9.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //Material by Google
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
-
-    //Material widgets by third parties
-    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.yalantis:ucrop:2.2.2'
-    implementation 'com.github.MdFarhanRaja:SearchableSpinner:2.0'
-    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
-    implementation "com.leinardi.android:speed-dial:3.1.1"
-    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 
     //Moshi
     implementation "com.squareup.moshi:moshi:$moshiVersion"
@@ -93,21 +84,29 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
-    //Facebook shimmer effect dependency
-    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
-
-    //Apache commons
-    implementation 'org.apache.commons:commons-lang3:3.11'
-
     // Firebase Crashlytics SDK.
-    implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx:17.6.0'
 //    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.firebase:firebase-messaging:20.3.0'
 
-    // Custom pdf pick
+    //Material widgets by third parties
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.yalantis:ucrop:2.2.2'
+    implementation 'com.github.MdFarhanRaja:SearchableSpinner:2.0'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    implementation "com.leinardi.android:speed-dial:3.1.1"
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
+    implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'com.github.HBiSoft:PickiT:0.1.11'
 
     //Razorpay
-    implementation 'com.razorpay:checkout:1.6.3'
+    implementation 'com.razorpay:checkout:1.6.4'
+
+    //AWS
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.31'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.31'
 
 }
