--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -230,7 +230,7 @@
             android:enabled="true" />
 
         <service
-            android:name=".video.UploadService"
+            android:name=".video.VideoUploadService"
             android:enabled="true"
             android:exported="true"
             android:permission="TODO"
@@ -267,7 +267,29 @@
         <activity
             android:name="com.vunity.reader.Player"
             android:configChanges="orientation|screenSize|layoutDirection"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
+            android:name="com.vunity.report.Report"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
+            tools:ignore="LockedOrientationActivity" />
+
+        <service
+            android:name=".banner.UdpateBannerService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="TODO"
+            tools:ignore="ExportedService" />
+
+        <activity
+            android:name="com.vunity.banner.UpdateBanner"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            tools:ignore="LockedOrientationActivity" />
+
 
     </application>
 
