--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -277,7 +277,7 @@
             tools:ignore="LockedOrientationActivity" />
 
         <service
-            android:name=".banner.UdpateBannerService"
+            android:name=".banner.UpdateBannerService"
             android:enabled="true"
             android:exported="true"
             android:permission="TODO"
@@ -289,7 +289,6 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             tools:ignore="LockedOrientationActivity" />
-
 
     </application>
 
